@@ -8,8 +8,9 @@ if (!defined ('TYPO3_MODE')) {
 
 t3lib_extMgm::addPItoST43($_EXTKEY, 'pi1/class.tx_icsoddatastore_pi1.php', '_pi1', 'list_type', 0);
 
-
 t3lib_extMgm::addPItoST43($_EXTKEY, 'pi2/class.tx_icsoddatastore_pi2.php', '_pi2', 'list_type', 0);
+
+t3lib_extMgm::addPItoST43($_EXTKEY, 'pi3/class.tx_icsoddatastore_pi3.php', '_pi3', 'list_type', 0);
 
 
 //--- API commands ---
