@@ -12,6 +12,8 @@
 			<label index="sysfolder">Datastore</label>
 			<label index="pi2_title">Datastore RSS</label>
 			<label index="pi2_plus_wiz_description">Datastore RSS feed on filegroups</label>
+			<label index="pi3_title">Stats download</label>
+			<label index="pi3_plus_wiz_description">Stats files download</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="pi1_title">Entrepôt de fichiers</label>
@@ -19,6 +21,8 @@
 			<label index="sysfolder">Entrepôt</label>
 			<label index="pi2_title">Datastore RSS</label>
 			<label index="pi2_plus_wiz_description">Flux RSS des datasets</label>
+			<label index="pi3_title">Statistiques de téléchargements</label>
+			<label index="pi3_plus_wiz_description">Statistiques de téléchargements des fichiers</label>
 		</languageKey>
 	</data>
 </T3locallang>
