@@ -1,3 +1,7 @@
+2011-08-12 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added statistics table sql index on date and dataset
+	* Feature: Added plugin pi3
+
 2011-05-12 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added sql table for files downloads statistics
 
